added few memebrs details

--- a/index.html
+++ b/index.html
@@ -159,26 +159,106 @@
 
 
             <section id="team">
-                <h2>Our Team</h2>
+                <h2>Core Team</h2>
                 <div class="member-grid">
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="John Doe">
-                        <h3>John Doe</h3>
+                        <img src="/api/placeholder/150/150" alt="Gautam Kumar">
+                        <h3>Ms. Eirty Telang Kapoor</h3>
+                        <p class="role">Convenor</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Vaibhav Pratap Singh">
+                        <h3>Vaibhav Pratap Singh</h3>
                         <p class="role">President</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Jane Smith">
-                        <h3>Jane Smith</h3>
+                        <img src="/api/placeholder/150/150" alt="Suryansh Sharma">
+                        <h3>Suryansh Sharma</h3>
                         <p class="role">Vice President</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Mike Johnson">
-                        <h3>Mike Johnson</h3>
+                        <img src="/api/placeholder/150/150" alt="Sachin Singh Adhikari">
+                        <h3>Sachin Singh Adhikari</h3>
                         <p class="role">Secretary</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Emily Brown">
-                        <h3>Emily Brown</h3>
+                        <img src="/api/placeholder/150/150" alt="Ashwany Kumar Sharma">
+                        <h3>Ashwany Kumar Sharma</h3>
+                        <p class="role">Secretary</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Riyansh Varshney">
+                        <h3>Riyansh Varshney</h3>
+                        <p class="role">Event Coordinator</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Harshvardhan">
+                        <h3>Harshvardhan</h3>
+                        <p class="role">Event Coordinator</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Diksha Chauhan">
+                        <h3>Diksha Chauhan</h3>
+                        <p class="role">Event Coordinator</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Shresth Gupta">
+                        <h3>Shresth Gupta</h3>
+                        <p class="role">Event Coordinator</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Nishchal Anurag">
+                        <h3>Nishchal Anurag</h3>
+                        <p class="role">PR & Outreach</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Satyam Mishra">
+                        <h3>Satyam Mishra</h3>
+                        <p class="role">PR & Outreach</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Diti Vashisht">
+                        <h3>Diti Vashisht</h3>
+                        <p class="role">PR & Outreach</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Jayesh Bisht">
+                        <h3>Jayesh Bisht</h3>
+                        <p class="role">PR & Outreach</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Arul S Bharadwaj">
+                        <h3>Arul S Bharadwaj</h3>
+                        <p class="role">Graphic Designer</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Lovish Kukreja">
+                        <h3>Ayush Kukreja</h3>
+                        <p class="role">Graphic Designer</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Tiya Jain">
+                        <h3>Tiya Jain</h3>
+                        <p class="role">Social Media</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Vanya Raman">
+                        <h3>Vanya Raman</h3>
+                        <p class="role">Social Media</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Srijan Ranjan">
+                        <h3>Srijan Ranjan</h3>
+                        <p class="role">Social Media</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Vinay Chauhan">
+                        <h3>Vinay Chauhan</h3>
+                        <p class="role">Video Editor</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Gautam Kumar">
+                        <h3>Gautam Kumar</h3>
                         <p class="role">Treasurer</p>
                     </div>
                 </div>
@@ -189,18 +269,28 @@
                 <div class="member-grid">
                     <div class="member-card">
                         <img src="/api/placeholder/150/150" alt="Dr. Sarah Johnson">
-                        <h3>Dr. Sarah Johnson</h3>
-                        <p class="role">Technical Advisor</p>
+                        <h3>Inzemam ul haq</h3>
+                        <p class="role">Senior</p>
                     </div>
                     <div class="member-card">
                         <img src="/api/placeholder/150/150" alt="Prof. David Chen">
-                        <h3>Prof. David Chen</h3>
+                        <h3>Kilari teja</h3>
                         <p class="role">Industry Mentor</p>
                     </div>
                     <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Prof. David Chen">
+                        <h3>Ravpreet Maini</h3>
+                        <p class="role">Cloud Expert</p>
+                    </div>
+                    <div class="member-card">
                         <img src="/api/placeholder/150/150" alt="Lisa Wong">
-                        <h3>Lisa Wong</h3>
-                        <p class="role">Open Source Advocate</p>
+                        <h3>Shristi Pandey</h3>
+                        <p class="role">Researcher</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Lisa Wong">
+                        <h3>Palak</h3>
+                        <p class="role">Graphics Designer</p>
                     </div>
                 </div>
             </section>
@@ -210,23 +300,33 @@
                 <div class="member-grid">
                     <div class="member-card">
                         <img src="/api/placeholder/150/150" alt="Alex Turner">
-                        <h3>Alex Turner</h3>
-                        <p class="role">Lead Developer</p>
+                        <h3>Hilal Ahmad</h3>
+                        <p class="role">AI Guy</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Alex Turner">
+                        <h3>Tanmay</h3>
+                        <p class="role">Low Level</p>
                     </div>
                     <div class="member-card">
                         <img src="/api/placeholder/150/150" alt="Maria Garcia">
-                        <h3>Maria Garcia</h3>
-                        <p class="role">Security Researcher</p>
+                        <h3>Mayank Chaubey</h3>
+                        <p class="role">DSA Guy</p>
                     </div>
                     <div class="member-card">
                         <img src="/api/placeholder/150/150" alt="Tom Lee">
-                        <h3>Tom Lee</h3>
+                        <h3>TSR</h3>
                         <p class="role">UI/UX Designer</p>
                     </div>
                     <div class="member-card">
                         <img src="/api/placeholder/150/150" alt="Sophia Chen">
-                        <h3>Sophia Chen</h3>
-                        <p class="role">Data Scientist</p>
+                        <h3>AK</h3>
+                        <p class="role">Friendly Spiderman</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Sophia Chen">
+                        <h3>Avneesh</h3>
+                        <p class="role">Designer</p>
                     </div>
                 </div>
             </section>
