add some stuff and make some visuals eye relaxing

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
         <link rel="stylesheet" href="styles.css" />
+        <link rel="shortcut icon" href="/logo/The FOSS Club Logo.png" type="image/png">
     </head>
     <body>
         <header>
@@ -51,28 +52,30 @@
 
             <section id="about" class="section">
                 <h2>About Us</h2>
+                <div class="about">
                 <p>
                     The FOSS Club is a student community-based group in the
                     Delhi Technical Campus for enthusiasts focused on
-                    contributing to Free and Open Source Software and mentoring
+                    contributing to <span>Free and Open Source Software</span> and mentoring
                     students to achieve excellence in various fields of Computer
                     Science.
                 </p>
                 <h3>Core Pillars</h3>
                 <ul>
                     <li>
-                        Open Source: The FOSS Club focuses on open-source
+                        <b>Open Source</b>: The FOSS Club focuses on open-source
                         technologies and tools.
                     </li>
                     <li>
-                        Cyber Security: The FOSS Club also focuses on ethical
+                        <b>Cyber Security</b>: The FOSS Club also focuses on ethical
                         hacking and cyber security.
                     </li>
                     <li>
-                        Decentralization: The FOSS Club will focus on
+                        <b>Decentralization</b>: The FOSS Club will focus on
                         self-hosted and decentralization technologies and tools.
                     </li>
                 </ul>
+                </div>
             </section>
 
             <section id="projects" class="section">
@@ -268,27 +271,27 @@
                 <h2>Our Mentors</h2>
                 <div class="member-grid">
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Dr. Sarah Johnson">
+                        <img src="/api/placeholder/150/150" alt="Inzemam ul haq">
                         <h3>Inzemam ul haq</h3>
                         <p class="role">Senior</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Prof. David Chen">
+                        <img src="/api/placeholder/150/150" alt="Kilari teja">
                         <h3>Kilari teja</h3>
                         <p class="role">Industry Mentor</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Prof. David Chen">
+                        <img src="/api/placeholder/150/150" alt="Ravpreet Maini">
                         <h3>Ravpreet Maini</h3>
                         <p class="role">Cloud Expert</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Lisa Wong">
+                        <img src="/api/placeholder/150/150" alt="Shristi Pandey">
                         <h3>Shristi Pandey</h3>
                         <p class="role">Researcher</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Lisa Wong">
+                        <img src="/api/placeholder/150/150" alt="Palak">
                         <h3>Palak</h3>
                         <p class="role">Graphics Designer</p>
                     </div>
@@ -299,34 +302,63 @@
                 <h2>Active Members</h2>
                 <div class="member-grid">
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Alex Turner">
+                        <img src="/api/placeholder/150/150" alt="Hilal Ahmad">
                         <h3>Hilal Ahmad</h3>
                         <p class="role">AI Guy</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Alex Turner">
-                        <h3>Tanmay</h3>
+                        <img src="/api/placeholder/150/150" alt="Tanmay Maheshwari">
+                        <h3>Tanmay Maheshwari</h3>
                         <p class="role">Low Level</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Maria Garcia">
+                        <img src="/api/placeholder/150/150" alt="Harshit Vashisht">
+                        <h3>Harshit Vashisht</h3>
+                        <p class="role">Web Dev.</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Mayank Chaubey">
                         <h3>Mayank Chaubey</h3>
                         <p class="role">DSA Guy</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Tom Lee">
+                        <img src="/api/placeholder/150/150" alt="TSR">
                         <h3>TSR</h3>
                         <p class="role">UI/UX Designer</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Sophia Chen">
-                        <h3>AK</h3>
+                        <img src="/api/placeholder/150/150" alt="Krish">
+                        <h3>Krish</h3>
                         <p class="role">Friendly Spiderman</p>
                     </div>
                     <div class="member-card">
-                        <img src="/api/placeholder/150/150" alt="Sophia Chen">
+                        <img src="/api/placeholder/150/150" alt="Avneesh">
                         <h3>Avneesh</h3>
                         <p class="role">Designer</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Chitranjan">
+                        <h3>Chitranjan</h3>
+                        <p class="role">Front-End</p>
+                    </div>  <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Abhishek Thapa">
+                        <h3>Abhishek Thapa</h3>
+                        <p class="role">Back-End</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Aditya Sachdeva">
+                        <h3>Aditya Sachdeva</h3>
+                        <p class="role">UI/UX and Blender</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Nitya  Kapoor">
+                        <h3>Nitya  Kapoor</h3>
+                        <p class="role">Cyber Security</p>
+                    </div>
+                    <div class="member-card">
+                        <img src="/api/placeholder/150/150" alt="Pragya Paramita">
+                        <h3>Pragya Paramita</h3>
+                        <p class="role">Web dev.</p>
                     </div>
                 </div>
             </section>
@@ -469,29 +501,25 @@
         <footer>
             <div class="footer-content">
                 <div class="social-links">
-                    <a href="https://github.com/thefossclub" target="_blank"
-                        ><i class="fab fa-github fa-md"></i
-                    ></a>
-                    <a href="https://twitter.com/thefossclub" target="_blank"
-                        ><i class="fab fa-twitter fa-md"></i
-                    ></a>
-                    <a
-                        href="https://linkedin.com/company/thefossclub"
-                        target="_blank"
-                        ><i class="fab fa-linkedin fa-md"></i
-                    ></a>
-                    <a href="https://instagram.com/thefossclub" target="_blank"
-                        ><i class="fab fa-instagram fa-md"></i
-                    ></a>
+                    <a href="https://github.com/thefossclub" target="_blank">
+                        <i class="fab fa-github fa-md"></i>
+                    </a>
+                    <a href="https://twitter.com/thefossclub" target="_blank">
+                        <i class="fab fa-twitter fa-md"></i>
+                    </a>
+                    <a href="https://linkedin.com/company/thefossclub" target="_blank">
+                        <i class="fab fa-linkedin fa-md"></i>
+                    </a>
+                    <a href="https://instagram.com/thefossclub" target="_blank">
+                        <i class="fab fa-instagram fa-md"></i>
+                    </a>
                 </div>
                 <ul>
                     <li>
-                        <a href="http://tinyurl.com/fossclubcoc"
-                            >Code of Conduct</a
-                        >
+                        <a href="https://github.com/thefossclub/CodeofConduct" target="_blank" >Code of Conduct</a>
                     </li>
                     <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="https://linktr.ee/thefossclub" target="_blank">Contact</a></li>
                 </ul>
             </div>
             <p>&copy; 2024 The FOSS Club. All rights reserved.</p>
