--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
         <link rel="stylesheet" href="styles.css" />
-        <link rel="shortcut icon" href="/logo/The FOSS Club Logo.png" type="image/png">
+        <link rel="shortcut icon" href="/logo/favicon.ico" type="image/png">
     </head>
     <body>
         <header>
@@ -56,7 +56,7 @@
                 <p>
                     The FOSS Club is a student community-based group in the
                     Delhi Technical Campus for enthusiasts focused on
-                    contributing to <span>Free and Open Source Software</span> and mentoring
+                    contributing to <br><span class="foss">Free and Open Source Software <span class="meaning">Yes! That's the full form of FOSS</span></span> and mentoring
                     students to achieve excellence in various fields of Computer
                     Science.
                 </p>
