occpulied foreground for the correct button color

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <section id="home" class="hero">
                 <h1 id="mainTitle">Welcome to the FOSS Club!</h1>
                 <p>
-                    Learn, build, and collaborate with fellow open-source
+                    <b>Learn, build, and collaborate</b> with fellow open-source
                     enthusiasts.
                 </p>
                 <a href="https://opnform.com/forms/the-foss-club-registration-nst4zs" target="_blank" class="cta-button">Join Now</a><!--replaced on site forrum to external redirect, opening it in a new tab-->
