updated the core pillar

--- a/index.html
+++ b/index.html
@@ -62,16 +62,13 @@
                 <h3>Core Pillars</h3>
                 <ul>
                     <li>
-                        <b>Open Source</b>: The FOSS Club focuses on open-source
-                        technologies and tools.
+                        <b>Open Source</b>: The FOSS Club promotes open-source software, FOSS philosophy, self-hosting, Linux, and collaborative development.
                     </li>
                     <li>
-                        <b>Cyber Security</b>: The FOSS Club also focuses on ethical
-                        hacking and cyber security.
+                        <b>Cyber Security</b>: The FOSS Club explores ethical hacking, CTFs, reverse engineering, digital privacy, OSINT, and cybersecurity research.
                     </li>
                     <li>
-                        <b>Decentralization</b>: The FOSS Club will focus on
-                        self-hosted and decentralization technologies and tools.
+                        <b>Hardware</b>: The FOSS Club will focus on self-hosted systems, open hardware, embedded devices, SBCs (like Raspberry Pi and RISC-V boards), firmware hacking, retro computing, and all the cool hardware stuff.
                     </li>
                 </ul>
                 </div>
