--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
         <link rel="stylesheet" href="styles.css" />
+        <link rel="icon" href="/logo/favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <header>
